--- a/wat-note3/package.json
+++ b/wat-note3/package.json
@@ -2,22 +2,27 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "node ./scripts/gen-rss.js && next build",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
-    "nextra": "^2.0.0-beta.5",
-    "nextra-theme-blog": "^2.0.0-beta.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rss": "^1.2.2"
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "typescript": "^4.7.4"
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
