--- a/wat-note3/package.json
+++ b/wat-note3/package.json
@@ -14,10 +14,14 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
-    "typescript": "^4.7.4"
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "typescript": "^4.7.4",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
