--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Build
-        run: npm run build  # React ビルド
+      - name: Build and Export
+        run: npm run export
 
       - name: Deploy  # S3にデプロイ 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: 
-          aws s3 cp --recursive --region ap-northeast-1 build s3://wat-note3
+          aws s3 sync --region ap-northeast-1 ./out s3://wat-note3 --delete
