Actions  読み込みテスト

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,6 +10,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main  # リポジトリをチェックアウト
 
+      - name: Prepare .env.development file
+        run: |
+          cat << EOF > .env.development
+          TEST=parameter_store
+          NEXT_PUBLIC_TEST=parameter_store_public_test
+          EOF
+
       - name: Install Dependencies
         run: npm install
 
