--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,7 +14,10 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_DEVELOP }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEVELOP }}
-        run: aws ssm get-parameter --name ${{ secrets.AWS_SSM_PARAMETER_PATH_DEV }} --output json | jq -r '.Parameter.Value'  > .env.production
+        run: |
+          aws ssm get-parameter --name ${{ secrets.AWS_SSM_PARAMETER_PATH_DEV }} --output json | jq -r '.Parameter.Value'  > .env.production
+          cat .env.production >> $GITHUB_ENV
+          cat .env.production
 
       - name: Install Dependencies
         run: npm install
