--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,12 +12,12 @@ jobs:
 
       - name: Prepare .env.production file
         run: |
-          aws ssm get-parameter --name "/github/wat-notes3/dev" | jq -r '.Parameter.Value'  > .env
+          aws ssm get-parameter --name /github/wat-notes3/dev | jq -r .Parameter.Value  > .env
           ls -la
           cat .env >> $GITHUB_ENV
 
       - name: echo env
-        run: echo "${{ env.NEXT_PUBLIC_TEST }}"
+        run: echo "${{ env }}"
 
       - name: Install Dependencies
         run: npm install
