--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -19,7 +19,7 @@ jobs:
       - name: echo env
         run: |
           echo "${{ env }}"
-          echo `aws ssm get-parameter --name /github/wat-notes3/dev`
+          aws ssm get-parameter --name /github/wat-notes3/dev
 
       - name: Install Dependencies
         run: npm install
