--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Prepare .env file
         run: |
-          aws ssm get-parameter --name /github/wat-notes3/dev > .env
+          aws ssm get-parameter --name /github/wat-notes3/dev --output text > .env
           echo "TEST"
           ls -la
           cat .env >> $GITHUB_ENV
