--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -12,8 +12,9 @@ jobs:
 
       - name: Prepare .env file
         run: |
-          aws ssm get-parameter --name /github/wat-notes3/dev --output text > .env
           echo "TEST"
+          aws ssm get-parameter --name /github/wat-notes3/dev --output text > .env
+          echo "TEST2"
           ls -la
           cat .env >> $GITHUB_ENV
 
