--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,11 +14,8 @@ jobs:
         run: |
           echo "TEST"
           echo "TEST2"
-          echo `aws ssm get-parameter --name /github/wat-notes3/dev --output json`
-          echo "TEST3"
-          echo `aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter`
           echo "TEST4"
-          echo `aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`
+          echo ${{ toJSON(`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value ) }}`
           echo "TEST5"
           aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value > .env
           echo "TEST6"
