--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,8 +28,8 @@ jobs:
       - name: echo env
         run: |
           echo "${{ env }}"
-          aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value
-          toJSON(aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value)
+          VALUE=`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`
+          toJSON($VALUE)
           toJSON(`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`)
 
       - name: Install Dependencies
