--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           echo "${{ env }}"
           VALUE=`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`
+          echo "$VALUE"
+          echo "${{ VALUE }}"
           toJSON($VALUE)
           toJSON(`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`)
 
