--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,12 +28,8 @@ jobs:
 
       - name: echo env
         run: |
-          echo "${{ env }}"
           VALUE=`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`
-          echo "$VALUE"
-          echo "${{ VALUE }}"
-          toJSON($VALUE)
-          toJSON(`aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value`)
+          echo "${{ env.VALUE }}"
 
       - name: Install Dependencies
         run: npm install
