--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,9 +22,11 @@ jobs:
           echo "TEST5"
           aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value > .env
           echo "TEST6"
-          echo ${{ env.NEXT_PUBLIC_TEST }}
+          aws ssm get-parameter --name /github/wat-notes3/dev --output json | jq -r .Parameter.Value >> "$GITHUB_ENV"
           ls -la
           cat .env >> $GITHUB_ENV
+          echo "TEST7"
+          echo ${{ env.NEXT_PUBLIC_TEST }}
 
       - name: echo env
         run: |
