--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,9 +13,9 @@ jobs:
       - name: "set aws credential"
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          AWS-REGION: ${{ secrets.AWS_REGION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_DEVELOP }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEVELOP }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEVELOP }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEVELOP }}
 
       - name: Prepare .env file
         run: |
