--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main  # リポジトリをチェックアウト
 
+      - name: "set aws credential"
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Prepare .env file
+        run: |
+          aws ssm get-parameter --name /github/wat-notes3 --output json | jq -r .Parameter.Value > .env
+          cat .env >> "$GITHUB_ENV"
+
       - name: Install Dependencies
         run: npm install
 
@@ -17,8 +29,5 @@ jobs:
         run: npm run export
 
       - name: Deploy  # S3にデプロイ 
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: 
           aws s3 sync --region ap-northeast-1 ./out s3://wat-note3 --delete
