--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "aws-cdk-lib": "^2.97.0",
     "classnames": "^2.3.2",
+    "constructs": "^10.2.70",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
     "next": "latest",
