--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "algoliasearch": "^4.20.0",
     "aws-cdk-lib": "^2.97.0",
     "classnames": "^2.3.2",
     "constructs": "^10.2.70",
@@ -18,6 +19,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-instantsearch": "^7.2.0",
     "rehype-katex": "^6.0.2",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
@@ -26,6 +28,7 @@
     "remark-math": "^4.0.0",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "unified": "^10.1.2"
   },
