--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@algolia/client-search": "^4.20.0",
     "algoliasearch": "^4.20.0",
     "aws-cdk-lib": "^2.97.0",
     "classnames": "^2.3.2",
