--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -31,3 +31,7 @@ jobs:
       - name: Deploy  # S3にデプロイ 
         run: 
           aws s3 sync --region ap-northeast-1 ./out s3://dev-wat-note3-bucket --delete
+
+      - name: Send Data to algolia  # Algoliaにデータ送信
+        run: 
+          cd tools/algolia && node sendRecords.js
