--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build",
     "export": "next build && next export",
     "start": "next start",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
@@ -34,11 +36,20 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.4",
+    "@storybook/addon-interactions": "^7.6.4",
+    "@storybook/addon-links": "^7.6.4",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.4",
+    "@storybook/nextjs": "^7.6.4",
+    "@storybook/react": "^7.6.4",
+    "@storybook/test": "^7.6.4",
     "@types/node": "^18.17.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "storybook": "^7.6.4",
     "tailwindcss": "^3.3.3"
   }
 }
