--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "next start",
     "typecheck": "tsc",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "chromatic",
+    "git:push": "git push && chromatic"
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
@@ -48,6 +50,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
+    "chromatic": "^11.0.0",
     "postcss": "^8.4.27",
     "storybook": "^7.6.4",
     "tailwindcss": "^3.3.3"
