--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "remark-math": "^4.0.0",
+    "remark-mermaidjs": "^6.0.0",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "ts-node": "^10.9.1",
