--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-instantsearch": "^7.2.0",
+    "recoil": "^0.7.7",
     "rehype-katex": "^6.0.2",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
