--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build React on S3
+name: Build React on S3(prd)
 on:
   push:
       branches:
@@ -31,7 +31,7 @@ jobs:
 
       - name: Deploy  # S3にデプロイ 
         run: 
-          aws s3 sync --region ap-northeast-1 ./out s3://wat-note3 --delete
+          aws s3 sync --region ap-northeast-1 ./out s3://prd-wat-note3-bucket --delete
 
       - name: Send Data to algolia  # Algoliaにデータ送信
         run: 
