--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -34,7 +35,6 @@
     "remark-math": "^4.0.0",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "unified": "^10.1.2"
   },
@@ -55,6 +55,7 @@
     "chromatic": "^11.0.0",
     "postcss": "^8.4.27",
     "storybook": "^7.6.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tsx": "^4.15.7"
   }
 }
