--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-instantsearch": "^7.2.0",
