--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Build and Export
-        run: npm run export
+        run: npm run build
 
       - name: Deploy  # S3にデプロイ 
         run: 
