--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
+    "jsdom": "^26.0.0",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,6 +48,7 @@
     "@storybook/react": "^7.6.4",
     "@storybook/test": "^7.6.4",
     "@types/gtag.js": "^0.0.20",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^18.17.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
