--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && tsx src/lib/generateRSS.ts",
     "start": "next start",
     "typecheck": "tsc",
     "storybook": "storybook dev -p 6006",
@@ -36,6 +36,7 @@
     "remark-math": "^4.0.0",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "tsx": "^4.19.3",
     "typescript": "^4.9.5",
     "unified": "^10.1.2"
   },
@@ -57,7 +58,6 @@
     "chromatic": "^11.0.0",
     "postcss": "^8.4.27",
     "storybook": "^7.6.4",
-    "tailwindcss": "^3.3.3",
-    "tsx": "^4.19.3"
+    "tailwindcss": "^3.3.3"
   }
 }
