highlight.js 適用方法変更

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "feed": "^4.2.2",
     "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "next": "^14.2.5",
     "react": "^18.2.0",
