--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
+    "@next/third-parties": "^15.2.3",
     "algoliasearch": "^4.20.0",
     "aws-cdk-lib": "^2.97.0",
     "classnames": "^2.3.2",
