storybookバージョンアップ・ページデプロイに向け整理

--- a/package.json
+++ b/package.json
@@ -43,23 +43,29 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-interactions": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/nextjs": "^7.6.4",
-    "@storybook/react": "^7.6.4",
-    "@storybook/test": "^7.6.4",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/experimental-nextjs-vite": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/test": "^8.6.12",
     "@types/gtag.js": "^0.0.20",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^18.17.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@vitest/browser": "^3.1.1",
+    "@vitest/coverage-v8": "^3.1.1",
     "autoprefixer": "^10.4.14",
     "chromatic": "^11.0.0",
+    "playwright": "^1.51.1",
     "postcss": "^8.4.27",
-    "storybook": "^7.6.4",
-    "tailwindcss": "^3.3.3"
+    "storybook": "^8.6.12",
+    "tailwindcss": "^3.3.3",
+    "vitest": "^3.1.1"
   }
 }
