--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,14 +2,14 @@
 name: Build React on S3(develop)
 on:
   push:
-      branches:
-        - develop
+    branches:
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@main  # リポジトリをチェックアウト
+        uses: actions/checkout@main # リポジトリをチェックアウト
 
       - name: "set aws credential"
         uses: aws-actions/configure-aws-credentials@v1
@@ -30,10 +30,11 @@ jobs:
       - name: Build and Export
         run: npm run build
 
-      - name: Deploy  # S3にデプロイ 
-        run: 
-          aws s3 sync --region ap-northeast-1 ./out s3://dev-wat-note3-bucket --delete
+      - name: build Storybook
+        run: npm run build-storybook && mkdir -p out/storybook && cp -r storybook-static/* out/storybook/
 
-      - name: Send Data to algolia  # Algoliaにデータ送信
-        run: 
-          cd tools/algolia && node sendRecords.js
+      - name: Deploy # S3にデプロイ
+        run: aws s3 sync --region ap-northeast-1 ./out s3://dev-wat-note3-bucket --delete
+
+      - name: Send Data to algolia # Algoliaにデータ送信
+        run: cd tools/algolia && node sendRecords.js
