--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,3 +38,10 @@ jobs:
 
       - name: Send Data to algolia # Algoliaにデータ送信
         run: cd tools/algolia && node sendRecords.js
+
+      # Cloudfront キャッシュ削除
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id $CLOUDFRONT_DISTRIBUTION_ID \
+            --paths "/*"
