playwrightインストール

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ rss.xml
 
 *storybook.log
 storybook-static/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
