--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && tsx src/lib/generateRSS.ts",
-    "test:vrt": "playwright test",
+    "test:vrt": "playwright test --update-snapshots",
     "test:vrt-report": "playwright show-report",
     "start": "next start",
     "typecheck": "tsc",
