--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
-    "@next/third-parties": "^15.2.3",
+    "@next/third-parties": "^16.0.8",
     "algoliasearch": "^4.20.0",
     "aws-cdk-lib": "^2.97.0",
     "classnames": "^2.3.2",
@@ -28,9 +28,9 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
-    "next": "^14.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.0.8",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-instantsearch": "^7.2.0",
     "recoil": "^0.7.7",
     "rehype-katex": "^6.0.2",
@@ -42,34 +42,29 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "tsx": "^4.19.3",
-    "typescript": "^4.9.5",
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.1.3",
     "@playwright/test": "^1.52.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
-    "@storybook/experimental-nextjs-vite": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/test": "^8.6.12",
+    "@storybook/addon-links": "^10.1.6",
+    "@storybook/addon-onboarding": "^10.1.6",
+    "@storybook/react": "^10.1.6",
+    "@storybook/react-vite": "^10.1.6",
     "@types/gtag.js": "^0.0.20",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^18.17.3",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "^22.13.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
     "chromatic": "^11.0.0",
     "playwright": "^1.51.1",
-    "postcss": "^8.4.27",
-    "storybook": "^8.6.12",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.6",
+    "storybook": "^10.1.6",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.2",
     "vitest": "^3.1.1"
   }
 }
