--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
-name: E2E and VRT Tests
+name: E2E and Unit Tests
+#name: E2E and VRT Tests
 on:
   workflow_run:
     workflows: ["Build React on S3(develop)"]
@@ -9,7 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,8 +18,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: "18"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -52,19 +53,19 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      - name: Run VRT tests
-        run: npx playwright test --update-snapshots
-        env:
-          CI: true
-        continue-on-error: true
+      # - name: Run VRT tests
+      #   run: npx playwright test --update-snapshots
+      #   env:
+      #     CI: true
+      #   continue-on-error: true
 
-      - name: Upload VRT snapshots
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-snapshots
-          path: test-snapshots/
-          retention-days: 30
+      # - name: Upload VRT snapshots
+      #   uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: test-snapshots
+      #     path: test-snapshots/
+      #     retention-days: 30
 
       - name: Run unit tests
         run: npm run test
@@ -85,7 +86,7 @@ jobs:
         run: |
           echo "## Test Results Summary" >> $GITHUB_STEP_SUMMARY
           echo "- E2E Tests: Completed" >> $GITHUB_STEP_SUMMARY
-          echo "- VRT Tests: Completed" >> $GITHUB_STEP_SUMMARY
+          # echo "- VRT Tests: Completed" >> $GITHUB_STEP_SUMMARY
           echo "- Unit Tests: Completed" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Check the artifacts for detailed test results." >> $GITHUB_STEP_SUMMARY
